<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center"
        android:padding="@dimen/margin"
        android:text="@string/adivina_title"
        android:textColor="@color/txt_black"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/txt_intentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:padding="@dimen/margin"
        android:text="@string/intentos_txt"
        android:textColor="@color/txt_black"
        android:textSize="18sp">

    </TextView>

    <TextView
        android:id="@+id/txt_adivina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:gravity="center"
        android:padding="@dimen/margin"
        android:text="@string/adivinar_1_100_txt"
        android:textAlignment="center"
        android:textColor="@color/txt_black"
        android:textSize="24sp">

    </TextView>

    <EditText
        android:id="@+id/edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="195dp"
        android:backgroundTint="@color/txt_black"
        android:ems="10"
        android:hint="@string/adivina_hint"
        android:inputType="number"
        android:padding="@dimen/margin"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_prueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/margin"
        android:layout_marginBottom="14dp"
        android:textColor="@color/txt_black"
        android:backgroundTint="@color/btn_color"
        android:text="@string/prueba_numero_txt" />

</RelativeLayout>